--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>Rotas</title>
 </head>
 <body>
@@ -15,10 +15,10 @@
         <h2>Novo endereço</h2>
         <div class="form-control">
             <input autofocus type="text" id="text" placeholder="Novo endereço">
-            <button class="btn">Adicionar</button>
+            <button class="btn" onclick="teste()">Adicionar</button>
         </div>
         <h2>Rotas</h2>
-        <div class="rotas">
+        <!-- <div class="rotas">
             <h3>Rota A</h3>
             <ul>
                 <li>Endereço 1</li>
@@ -39,12 +39,13 @@
                 <li>Endereço 1</li>
 
             </ul>
-        </div>
+        </div> -->
     </main>
     <footer>
         <p>&reg Julio Cardoso | 2021</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script type="" src="script.js"></script>
+
 </body>
 </html>
